--- a/Will you visit my restaurant.ipynb
+++ b/Will you visit my restaurant.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "**Objectives** : \n",
     "\n",
-    "We have free files, containing informations about :\n",
+    "We have three files, containing informations about :\n",
     "- Restaurants : 461 restaurants and anonymous labels describing them, \n",
     "- Clients : 192 clients of those restaurants, i.e. that have visited at least one of them in the past, described by 9 anonymous quantitatives variables;\n",
     "- Visits : a 192x461 matrix indicating whether the ith customer has visited (v(i,j) = 1) or not (v(i,j) = 0) the jth restaurant. \n",
